[tool.poetry]
name = "app"
version = "0.1.0"
description = "A module for controlling a 3dp delta robot"
authors = ["idoglanz <ido.glanz@valerann.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
plotly = "^5.5.0"
dash = "^2.1.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
dash-bootstrap-components = "^1.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
